cbits/Bullet.h

float btRaycastVehicle_btVehicleTuning_m_suspensionStiffness_get(void *c); //attribute: ::btScalar btRaycastVehicle_btVehicleTuning->m_suspensionStiffness
void* btWheelInfo_new(void* p0); //constructor: btWheelInfo  ( ::btWheelInfo::* )( ::btWheelInfoConstructionInfo & ) 
void btWheelInfo_free(void *c);
 
float btWheelInfo_getSuspensionRestLength(void *c); //method: getSuspensionRestLength ::btScalar ( ::btWheelInfo::* )(  ) const
void btWheelInfo_updateWheel(void *c,void* p0,void* p1); //method: updateWheel void ( ::btWheelInfo::* )( ::btRigidBody const &,::btWheelInfo::RaycastInfo & ) 
void btWheelInfo_m_bIsFrontWheel_set(void *c,int a); //attribute: bool btWheelInfo->m_bIsFrontWheel
int btWheelInfo_m_bIsFrontWheel_get(void *c); //attribute: bool btWheelInfo->m_bIsFrontWheel
void btWheelInfo_m_brake_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_brake
float btWheelInfo_m_brake_get(void *c); //attribute: ::btScalar btWheelInfo->m_brake
void btWheelInfo_m_chassisConnectionPointCS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfo->m_chassisConnectionPointCS
void btWheelInfo_m_chassisConnectionPointCS_get(void *c,float* a);
void btWheelInfo_m_clientInfo_set(void *c,void* a); //attribute: void * btWheelInfo->m_clientInfo
void* btWheelInfo_m_clientInfo_get(void *c); //attribute: void * btWheelInfo->m_clientInfo
void btWheelInfo_m_clippedInvContactDotSuspension_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_clippedInvContactDotSuspension
float btWheelInfo_m_clippedInvContactDotSuspension_get(void *c); //attribute: ::btScalar btWheelInfo->m_clippedInvContactDotSuspension
void btWheelInfo_m_deltaRotation_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_deltaRotation
float btWheelInfo_m_deltaRotation_get(void *c); //attribute: ::btScalar btWheelInfo->m_deltaRotation
void btWheelInfo_m_engineForce_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_engineForce
float btWheelInfo_m_engineForce_get(void *c); //attribute: ::btScalar btWheelInfo->m_engineForce
void btWheelInfo_m_frictionSlip_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_frictionSlip
float btWheelInfo_m_frictionSlip_get(void *c); //attribute: ::btScalar btWheelInfo->m_frictionSlip
void btWheelInfo_m_maxSuspensionForce_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_maxSuspensionForce
float btWheelInfo_m_maxSuspensionForce_get(void *c); //attribute: ::btScalar btWheelInfo->m_maxSuspensionForce
void btWheelInfo_m_maxSuspensionTravelCm_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_maxSuspensionTravelCm
float btWheelInfo_m_maxSuspensionTravelCm_get(void *c); //attribute: ::btScalar btWheelInfo->m_maxSuspensionTravelCm
void btWheelInfo_m_raycastInfo_set(void *c,void* a); //attribute: ::btWheelInfo::RaycastInfo btWheelInfo->m_raycastInfo
void* btWheelInfo_m_raycastInfo_get(void *c); //attribute: ::btWheelInfo::RaycastInfo btWheelInfo->m_raycastInfo
void btWheelInfo_m_rollInfluence_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_rollInfluence
float btWheelInfo_m_rollInfluence_get(void *c); //attribute: ::btScalar btWheelInfo->m_rollInfluence
void btWheelInfo_m_rotation_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_rotation
float btWheelInfo_m_rotation_get(void *c); //attribute: ::btScalar btWheelInfo->m_rotation
void btWheelInfo_m_skidInfo_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_skidInfo
float btWheelInfo_m_skidInfo_get(void *c); //attribute: ::btScalar btWheelInfo->m_skidInfo
void btWheelInfo_m_steering_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_steering
float btWheelInfo_m_steering_get(void *c); //attribute: ::btScalar btWheelInfo->m_steering
void btWheelInfo_m_suspensionRelativeVelocity_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_suspensionRelativeVelocity